# hitsong-classification

./: .gitignore  Dockerfile  README.md  fastapi_app.py  flask_app.py  pyproject.toml  requirements.txt  train.py
notebook/: notebook.ipynb
